Intro phil science books: descriptions.
Added descriptions of introductory books to philosophy of science
(Tetens, Okasha, Lecourt).

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -81,11 +81,13 @@
       </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PLgSHH6boFf5tYoX6CUjDupfKgj5QajDeW"
-        lang="fr">Philosophie des Sciences</a>, 
+        lang="fr" hreflang="fr">Philosophie des Sciences</a>, 
         a series of lectures taught 
-        at <a href="http://www.centralesupelec.fr/" lang="fr">CentraleSupélec</a>
+        at <a href="http://www.centralesupelec.fr/" lang="fr" 
+        hreflang="fr">CentraleSupélec</a>
         in 2012 by the French physicist
-        <a href="https://fr.wikipedia.org/wiki/%C3%89tienne_Klein">Étienne Klein</a>.
+        <a href="https://fr.wikipedia.org/wiki/%C3%89tienne_Klein"
+        hreflang="fr">Étienne Klein</a>.
         (9 videos, on average 15 minutes long).
       </li>
       <!-- An Introduction to the History and Philosophy of Science  https://www.youtube.com/playlist?list=PL67E2553770A6E39E
@@ -109,26 +111,72 @@
       (<abbr>e.g.</abbr> Chalmers, Wiltsche and Schülein).
     </p>
     <ul>
-      <li lang="de">Tetens, Holm: 
+      <li lang="de"><a href="https://de.wikipedia.org/wiki/Holm_Tetens"
+        hreflang="de">Tetens, Holm</a>: 
         <span class="booktitle">Wissenschaftstheorie: Eine Einführung</span>. 
         C. H. Beck, 2013. 
-        <abbr>ISBN</abbr> <a href="http://www.chbeck.de/Tetens-Wissenschaftstheorie/productview.aspx?product=12220838">978-3-406-65331-5</a>.
+        <abbr>ISBN</abbr> <a hreflang="de"
+        href="http://www.chbeck.de/Tetens-Wissenschaftstheorie/productview.aspx?product=12220838">978-3-406-65331-5</a>.
+        <br />
+        This short and accessible introduction discusses what science is and what
+        we can and should expect from it. Tetens defines science as an ideal
+        that various disciplines fulfil to varying degrees. Tetens divides the
+        ideal of science in five ideals: the ideals of truth,<!--@@ Begründung --> justification,
+        explanation &amp; understanding, intersubjectivity and reflection (p. 17).
+        The humanities can also fulfil these ideals
+        (chapter 13). The final chapters discuss the perceived superiority of 
+        science, the limits to our knowledge about the future, and scientism.
       </li>
       <li>Okasha, Samir: 
         <span class="booktitle">Philosophy of Science: A Very Short Introduction</span>. 
         Oxford University Press, 2002. 
-        <abbr>ISBN</abbr> <a href="http://ukcatalogue.oup.com/product/academic/philosophy/science/9780192802835.do#.UVCCFfOTZ8E">978-0-19-280283-5</a>. 
+        <abbr>ISBN</abbr> <a 
+        href="http://ukcatalogue.oup.com/product/academic/philosophy/science/9780192802835.do#.UVCCFfOTZ8E">978-0-19-280283-5</a>.
+        <br />
+        This is another short introduction that is written in a very informal and
+        accessible style. It can be read together with Tetens' book without too
+        much overlap. It also represents a very different concept of science: 
+        <q>everybody knows that subjects such as physics, chemistry, and biology
+        constitute science, while subjects such as art, music, and theology do
+        not</q> (p. 1). In spite of this this casual dismissal, the book
+        is highly recommended for readers who want a first introduction to
+        philosophy of science. 
+        The book ends with suggestions for futher reading for each chapter.
       </li>
-      <li lang="fr">Lecourt, Dominique: 
+      <li lang="fr"><a href="https://fr.wikipedia.org/wiki/Dominique_Lecourt"
+        hreflang="fr">Lecourt, Dominique</a>: 
         <span class="booktitle">La philosophie des sciences</span>. Que sais-je? 3624. 
-        5e édition. Paris: Presses Universitaires de France, 2013. 
-        <abbr>ISBN</abbr> 978-2-13-058053-9. 
+        5e édition. Paris: Presses Universitaires de France, 2013. (128 p.)
+        <abbr>ISBN</abbr> 
+        <a href="http://www.puf.com/Que_sais-je:La_philosophie_des_sciences">978-2-13-058053-9</a>. 
+        <br /><span lang="fr">
+          This short book takes a more historical approach, although it jumps back
+          a few times in history, for example, it introduces David Hume when
+          discussing the problem of induction in chapter 9.
+          The overview starts in the 19th century, with figures such as
+          <a href="https://en.wikipedia.org/wiki/William_Whewell">William Whewell</a>
+          and 
+          <a href="https://en.wikipedia.org/wiki/Auguste_Comte" lang="fr">Auguste Comte</a>.
+          One of the benefits of this book is that it discusses thinkers that are
+          often ignored in other introductions, for example,
+          <a href="https://en.wikipedia.org/wiki/Ernst_Mach" lang="de">Ernst Mach</a>,
+          <a href="https://en.wikipedia.org/wiki/Gaston_Bachelard" lang="fr">Gaston Bachelard</a>,
+          <a href="https://en.wikipedia.org/wiki/Georges_Canguilhem" lang="fr">Georges Canguilhem</a>
+          and
+          <a href="https://en.wikipedia.org/wiki/Jean_Piaget" lang="fr">Jean Piaget</a>.
+          (The English and German books in this list generally ignore French
+          philosophy, except for references to 
+          <span lang="fr">Auguste Comte</span> and <span lang="fr">Pierre Duhem</span>.)
+          Readers of Tetens' or Okasha's introduction can still learn a lot from
+          this book.
+        </span>
       </li>
-      <li lang="de">Eberhard, Kurt: 
+      <li lang="de"><a href="https://de.wikipedia.org/wiki/Kurt_Eberhard_%28Psychologe%29"
+        hreflang="de">Eberhard, Kurt</a>: 
         <span class="booktitle">Einführung in die Erkenntnis- und Wissenschaftstheorie</span>. 
         Urban-Taschenbücher 386. Stuttgart: Kohlhammer, 1987. 
       </li>
-      <li>Chalmers, Alan F.: 
+      <li><a href="https://en.wikipedia.org/wiki/Alan_Chalmers">Chalmers, Alan F.</a>: 
         <span class="booktitle">What Is This Thing Called Science?</span> Fourth edition. 
         Indianapolis/Cambridge: Hackett Publishing, 2013 (282 p.) 
         <abbr>ISBN</abbr> <a href="http://www.hackettpublishing.com/philosophy/philosophy-science/what-is-this-thing-called-science-fourth-edition">978-1-62466-038-2</a>. 
@@ -140,7 +188,7 @@
         <abbr>UTB</abbr> 3936. Vandenhoeck &amp; Ruprecht, 2013. 
         <abbr>ISBN</abbr> <a href="http://www.utb-shop.de/einfuhrung-in-die-wissenschaftstheorie-1.html">978 38 25 23 93 67</a>. 
       </li>
-      <li>Lewens, Tim: 
+      <li><a href="https://en.wikipedia.org/wiki/Tim_Lewens">Lewens, Tim</a>: 
         <span class="booktitle">The Meaning of Science: A Pelican Introduction</span>. Pelican, 2015. 
         <abbr>ISBN</abbr> <a href="http://www.penguin.co.uk/books/the-meaning-of-science/9780141977423/">978-0-141-97742-3</a>. 
       </li>
@@ -186,18 +234,16 @@
   </main>
 
   <footer>
-    <p>
+    <p class="licence">
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img 
       alt="Creative Commons License" style="border-width:0" 
       src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />
-      <a href="http://purl.org/dc/dcmitype/Text" 
-      property="dct:title" rel="dct:type">Philosophy and Science</a> by 
-      <a 
-      href="https://github.com/cstrobbe" property="cc:attributionName" 
+      <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" 
+      property="dct:title" rel="dct:type">Philosophy and Science</span> by 
+      <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/cstrobbe" property="cc:attributionName" 
       rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a 
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
-      lang="en-US">Creative 
-      Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
+      lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </p>
   </footer>
 </body>
