+ philosophy of specific sciences
New section: Philosophy of Specific Sciences

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
@@ -194,6 +194,31 @@
       </li>
     </ul>
 
+    <h2>Philosophy of Specific Sciences</h2>
+    <ul>
+      <li>
+        <a href="http://www.rmm-journal.de/htdocs/st01.html">Statistical Science and Philosophy of Science: 
+        Where Do (Should) They Meet in 2011 and Beyond?</a>, a special issue of the open access journal
+        <i class="journal">Rationality, Markets and Morals</i> (2011)
+        edited by 
+        <a href="https://en.wikipedia.org/wiki/Deborah_Mayo">Deborah G. Mayo</a>,
+        Aris Spanos and Kent W. Staley.
+      </li>
+      <li><span lang="de">Sieroka, Norman:
+        <a href="http://www.chbeck.de/Sieroka-Philosophie-Physik/productview.aspx?product=13673164"
+        class="booktitle">Philosophie der Physik. Eine Einführung</a>. C.H.Beck Wissen: 2803.
+        C. H. Beck, 2014.</span> (127 p.) <abbr>ISBN</abbr> 978-3-406-66794-7 (paperback).
+      </li>
+      <li><span lang="de">Friebe, C.; Kuhlmann, M.; Lyre, H.; Näger, P.; Passon, OK.; Stöckler, M.:
+        <a href="http://www.springer.com/de/book/9783642377891" 
+        class="booktitle">Philosophie der Quantenphysik</a>.</span>
+        Springer, 2015. (296 p.) <abbr>ISBN</abbr> 978-3-642-37790-7
+        (eBook) / 978-3-642-37789-1 (paperback).<br />
+        This is a book about the central concepts and questions in 
+        quantum physics for physicists and philosophers.
+      </li>
+    </ul>
+
     <h2>Criticism of Science and Scientism</h2>
     <ul>
       <li><a href="https://www.youtube.com/watch?v=WEjrLbVlgQU">Paul Feyerabend - 
@@ -245,6 +270,9 @@
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
       lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </p>
+    <p><a href="https://github.com/cstrobbe/philosophy-and-science">GitHub repository for
+      <i>Philosophy and Science</i></a>.
+    </a>
   </footer>
 </body>
 </html>
