History of philosophy: books
History of philosophy: books (Russell, Copleston, Kenny).
(footer p.licence)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
@@ -288,6 +288,11 @@
       </li>
     </ul>
 
+    <!-- 
+    <h3>Skills and Methods</h3>
+    <p>See also at Continuum: http://www.bloomsbury.com/uk/academic/academic-subjects/philosophy/skills-and-methods-philosophy/ .</p>
+    -->
+
 
     <h3>Knowledge and Progress in Philosophy</h3>
     <p>Some people claim that philosophy makes no progress or even that it is dead 
@@ -443,7 +448,98 @@
 
 
     <h2>History of Philosophy</h2>
-    <h3>A Little History of Philosophy (2012)</h3>
+    <h3>A History of Western Philosophy (Russell, 1945)</h3>
+    <p>Russell, Bertrand: 
+      <a href="https://www.routledge.com/products/9780415325059" class="booktitle">History of Western Philosophy</a>.
+      Routledge, 2004. (792 p.) <abbr>ISBN</abbr> 9780415325059.<br />
+      <a href="https://en.wikipedia.org/wiki/Bertrand_Russell">Bertrand Russell</a>
+      originally published 
+      <a href="https://en.wikipedia.org/wiki/A_History_of_Western_Philosophy" 
+      title="Wikipedia: A History of Western Philosophy">this book</a> 
+      in 1945 and it has remained in print ever since its first publication.
+      It is very well written but biased against certain philosophers.
+      In his autobiography, Russell said the following about bias:
+      <q cite="http://philosophy.stackexchange.com/questions/10918/how-inaccurate-is-a-history-of-western-philosophy-by-bertrand-russell">But 
+      to my mind, a man without a bias cannot write interesting history – if, indeed, such a man exists. 
+      I regard it as mere humbug to pretend to lack of bias.</q>
+    </p>
+
+    <h3>A History of Philosophy (Coppleston)</h3>
+    <p>Copleston, Frederick:
+      <a href="http://www.bloomsbury.com/uk/history-of-philosophy-volume-1-9780826468956/"
+      class="booktitle">Greece and Rome</a> (Volume 1),
+      <a href="http://www.bloomsbury.com/uk/history-of-philosophy-volume-2-9780826468963/"
+      class="booktitle">Medieval Philosophy</a> (Volume 2),
+      <a href="http://www.bloomsbury.com/uk/history-of-philosophy-volume-3-9780826468970/"
+      class="booktitle">Late Medieval and Renaissance Philosophy</a> (Volume 3),
+      <a href="http://www.bloomsbury.com/uk/history-of-philosophy-volume-4-9780826468987/"
+      class="booktitle">The Rationalists: Descartes to Leibniz</a> (Volume 4),
+      <a href="http://www.bloomsbury.com/uk/history-of-philosophy-volume-5-9780826468994/"
+      class="booktitle">British Philosophy: Hobbes to Hume</a> (Volume 5),
+      <a href="http://www.bloomsbury.com/uk/history-of-philosophy-volume-6-9780826469007/"
+      class="booktitle">The Enlightenment: Voltaire to Kant</a> (Volume 6),
+      <a href="http://www.bloomsbury.com/uk/history-of-philosophy-volume-7-9780826469014/"
+      class="booktitle">18th and 19th Century German Philosophy</a> (Volume 7),
+      <a href="http://www.bloomsbury.com/uk/history-of-philosophy-volume-8-9780826469021/"
+      class="booktitle">Unitarianism to Early Analytic Philosophy </a> (Volume 8),
+      <a href="http://www.bloomsbury.com/uk/history-of-philosophy-volume-9-9780826469038/"
+      class="booktitle">19th and 20th Century French Philosophy </a> (Volume 9),
+      <a href="http://www.bloomsbury.com/uk/history-of-philosophy-volume-10-9780826469045/"
+      class="booktitle">Russian Philosophy </a> (Volume 10).
+    </p>
+    <p><a href="https://en.wikipedia.org/wiki/Frederick_Copleston">Frederick Copleston</a>
+      was a Jesuit priest and philospher. 
+      He published the first nine volumes of
+      <a href="https://en.wikipedia.org/wiki/A_History_of_Philosophy_%28Copleston%29"
+      class="booktitle" title="Wikipedia: A History of Philosophy">A History of Philosophy</a>
+      between between 1946 and 1974.
+      The tenth volume on Russian philosophy was added in 1986.
+    </p>
+
+    <h3>A New History of Western Philosophy (Kenny, 2006-2007)</h3>
+    <ul>
+      <li>Kenny, Anthony:
+        <a href="http://ukcatalogue.oup.com/product/9780198752721.do" class="booktitle">Ancient Philosophy</a>.
+        A New History of Western Philosophy, Volume 1.
+        Oxford: Oxford University Press, 2006. (364 p.)
+        <abbr>ISBN</abbr> 978-0-19-875272-1 (paperback)
+      </li>
+      <li>Kenny, Anthony:
+        <a href="http://ukcatalogue.oup.com/product/9780198752745.do" class="booktitle">Medieval Philosophy</a>.
+        A New History of Western Philosophy, Volume 2.
+        Oxford: Oxford University Press, 2007. (352 p.)
+        <abbr>ISBN</abbr> 978-0-19-875274-5 (paperback)
+      </li>
+      <li>Kenny, Anthony:
+        <a href="http://ukcatalogue.oup.com/product/9780198752769.do" class="booktitle">The Rise of Modern Philosophy</a>.
+        A New History of Western Philosophy, Volume 3.
+        Oxford: Oxford University Press, 2008. (376 p.)
+        <abbr>ISBN</abbr> 978-0-19-875276-9 (paperback) / 
+        <abbr>ISBN</abbr> 978-0-19-875277-6 (hardback)
+      </li>
+      <li>Kenny, Anthony:
+        <a href="http://ukcatalogue.oup.com/product/9780198752790.do" class="booktitle">Philosophy in the Modern World</a>.
+        A New History of Western Philosophy, Volume 4.
+        Oxford: Oxford University Press, 2007. (368 p.)
+        <abbr>ISBN</abbr> 978-0-19-954637-4 (paperback) / 
+        <abbr>ISBN</abbr> 978-0-19-875279-0 (hardback)
+        <!-- @@ sample http://fdslive.oup.com/www.oup.com/academic/pdf/13/9780198752790.pdf -->
+      </li>
+    </ul>
+    <p><a href="https://en.wikipedia.org/wiki/Anthony_Kenny">Anthony Kenny</a> wrote
+      this <a href="http://ukcatalogue.oup.com/category/academic/series/philosophy/nhwp.do">four-volume history</a> 
+      with the objective to be 
+      <a href="http://www.meettheauthor.co.uk/bookbites/1778.html" 
+      title="Video in which Anthony Kenny explains the objective of the book series">more 
+      accurate than Russell and more readable than Coppleston</a> 
+      (Copplestone's ten-volume work which is otherwise very sound). 
+      The work has also become available in a single volume
+      (<a href="http://ukcatalogue.oup.com/product/9780199656493.do">paperback</a> or
+      <a href="http://ukcatalogue.oup.com/product/academic/series/philosophy/nhwp/9780199589883.do">hardback</a>).
+      <!-- sample http://fdslive.oup.com/www.oup.com/academic/pdf/13/9780199589883.pdf -->
+    </p>
+
+    <h3>A Little History of Philosophy (Warburton, 2012)</h3>
     <p>Warburton, Nigel:
       <a href="http://yalepress.yale.edu/yupbooks/book.asp?isbn=9780300187793" 
       class="booktitle">A Little History of Philosophy</a>.
@@ -784,19 +880,20 @@
   </main>
 
   <footer>
-    <p>
+    <p class="licence">
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img 
       alt="Creative Commons License" style="border-width:0" 
       src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />
-      <a href="http://purl.org/dc/dcmitype/Text" 
-      property="dct:title" rel="dct:type">Philosophy and Science</a> by 
-      <a 
-      href="https://github.com/cstrobbe" property="cc:attributionName" 
+      <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" 
+      property="dct:title" rel="dct:type">Philosophy and Science</span> by 
+      <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/cstrobbe" property="cc:attributionName" 
       rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a 
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
-      lang="en-US">Creative 
-      Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
+      lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </p>
+    <p><a href="https://github.com/cstrobbe/philosophy-and-science">GitHub repository for
+      <i>Philosophy and Science</i></a>.
+    </a>
   </footer>
 </body>
 </html>
