New licence code.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
@@ -67,19 +67,20 @@
   </main>
 
   <footer>
-    <p>
+    <p class="licence">
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img 
       alt="Creative Commons License" style="border-width:0" 
       src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />
-      <a href="http://purl.org/dc/dcmitype/Text" 
-      property="dct:title" rel="dct:type">Philosophy and Science</a> by 
-      <a 
-      href="https://github.com/cstrobbe" property="cc:attributionName" 
+      <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" 
+      property="dct:title" rel="dct:type">Philosophy and Science</span> by 
+      <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/cstrobbe" property="cc:attributionName" 
       rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a 
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
-      lang="en-US">Creative 
-      Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
+      lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </p>
+    <p><a href="https://github.com/cstrobbe/philosophy-and-science">GitHub repository for
+      <i>Philosophy and Science</i></a>.
+    </a>
   </footer>
 </body>
 </html>
