+ orgs that promote or teach philosophy
Aristotelian Society, Die Anstifiter, Forum for European Philosophy.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -677,6 +677,28 @@
       <!-- Faith and Science Conference (2014): Genesis and Genetics: https://www.youtube.com/playlist?list=PL-0zpu2toenb3bETgPaYB7QrOVpVkzUIA -->
     </ul>
 
+    <h2>Organisations That Promote or Teach Philosophy</h2>
+    <ul>
+      <li>The <a href="http://www.aristoteliansociety.org.uk/">Aristotelian Society</a>
+        was established in London in 1880. One of its activities is the organisation of 
+        <a href="http://www.aristoteliansociety.org.uk/the-proceedings/future-programmes/">philosophy talks</a> 
+        that are open to the general public. These talks take place
+        every other Monday at the Senate House of the University of London. 
+      </li>
+      <li><a href="http://www.die-anstifter.de/" lang="de">Die Anstifter</a> is a 
+        voluntary association 
+        (<a href="https://en.wikipedia.org/wiki/Eingetragener_Verein" lang="de">eingetragener Verein</a>) in Stuttgart, Germany.
+        One of its activities is the 
+        <a href="http://www.die-anstifter.de/termine/kategorien/philosophisches-cafe/" lang="de" hreflang="de">Philosophisches Café</a>
+        with regular lectures and workshops on philosophy. 
+        <!-- Die Anstiftung in Dresden http://anstiftung.de/ does not offer philosophy talks. -->
+      </li>
+      <li>The <a href="http://www.lse.ac.uk/europeanInstitute/research/forumForEuropeanPhilosophy/">Forum for European Philosophy</a>
+        at the <abbr title="London School of Economics and Political Science">LSE</abbr> in London describes itself an
+        <q>an educational charity which organises and runs a full and varied programme of philosophy and interdisciplinary events in the <abbr>UK</abbr></q>.
+        Almost all of their events are free to attend.
+      </li>
+    </ul>
 
     <h2>Specific Philosophers and Themes</h2>
     <ul>
