--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       intellectuals</a>!
     </p>
 
-    <h2>World Philsophy Day</h2>
+    <h2 id="philoday">World Philosophy Day</h2>
     <p>Thursday 19 November 2015 is 
       <strong>World Philosophy Day</strong>
       <a href="http://www.unesco.org/new/en/social-and-human-sciences/themes/philosophy/philosophy-day-at-unesco/">at <abbr>UNESCO</abbr></a>.
