World Philosophy Day 2015 = past.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <abbr>UNESCO</abbr> established the 
       <strong><a href="http://www.unesco.org/new/en/social-and-human-sciences/themes/philosophy/philosophy-day-at-unesco/">World Philosophy Day</a></strong> in 2005. 
       The event is celebrated each year on the third Thursday of November.
-      In 2015, World Philosophy Day is celebrated on Thursday 19 November 2015. 
+      In 2015, World Philosophy Day was celebrated on Thursday 19 November. 
     </p>
     <p>Below are some resources published on the occasion of World Philosophy Day 2015:</p>
     <ul>
