Other blogs and sites about philosophy of science.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -323,6 +323,21 @@
         ideas received negative reception in the scientific community.)
       </li>
     </ul>
+
+    <h2>Other Resources</h2>
+    <ul>
+      <li>The biochemist Laurence T. Moran has written many 
+        <a href="http://sandwalk.blogspot.de/search/label/Philosophy%20of%20Science">blog posts related to philosophy of science</a>.
+        The blog posts cover topics such as methodological naturalism, the demarcation between science and pseudoscience,
+        evolution versus creationism and &ldquo;intelligent design&rdquo;, scientism, the possibility of scientific research on the supernatural,
+        and critical thinking.
+      </li>
+      <li>The <i class="journal">Prometheus Journal</i>, 
+        an undergraduate philosophy journal published by students at Johns Hopkins University, 
+        has also published a number of articles on 
+        <a href="http://prometheus-journal.com/category/philosophy-of-science/">philosophy of science</a>.
+      </li>
+    </ul>
   </main>
 
   <footer>
