+ Organisations in the USA

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -720,6 +720,24 @@
         and also publishes books on philosophical topics.
       </li>
     </ul>
+    <h3>United States of America (<abbr>USA</abbr>)</h3>
+    <ul>
+      <li>
+        <a href="http://plato-philosophy.org/"><abbr>PLATO</abbr>: Philosophy Learning and Teaching Organization</a>
+        <q cite="http://plato-philosophy.org/who-we-are/about/">advocates and supports introducing philosophy to K-12 students through programs, 
+        resource-sharing and the development of a national network of those working in pre-college philosophy</q>.
+        Its website contains many resources, <abbr>e.g.</abbr>
+        guidance and recommended books for 
+        <a href="http://plato-philosophy.org/getting-started/teaching-high-school-philosophy/">teaching high school philosophy</a>,
+        <a href="http://plato-philosophy.org/resources/guides-to-philosophy/">guides to philosophy</a>
+        and
+        <a href="http://plato-philosophy.org/lesson-plans-2/pre-college-course-material/">lesson plans for teachers</a>.
+      </li>
+      <li>The 
+        <a href="http://www.apaonline.org/">American Philosophical Assocation (<abbr>APA</abbr>)</a>
+        <q>promotes the discipline and profession of philosophy, both within the academy and in the public arena</q>.
+      </li>
+    </ul>
 
     <h2>Specific Philosophers and Themes</h2>
     <p>TrueSciPhi has created a list of 
